# OpenGLLayeredWindow

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml
cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
res/: Resource.h  Resource.rc
shaders/: flat.frag  per_face_phong.geom  per_pixel_phong.frag  per_pixel_phong.geom  vertex.vert
source/: View.cpp  View.h  gl.h  main.cpp  stdafx.cpp  stdafx.hpp
source/io/: ReadFile.cpp  ReadFile.h  Wavefront.cpp  Wavefront.h
source/ogl/: OpenGLContext.h  Utility1.h  Utility3.h
source/pix/: Pixmap.cpp  Pixmap.h
source/wex/: Bitmap.cpp  Bitmap.h  DC.h  DIBSection.cpp  DIBSection.h  Point.h  Rect.h  Resource.cpp  Resource.h  Size.h  Window.cpp  Window.h  WindowClass.cpp  WindowClass.h
source/wgl/: OpenGLContext.cpp  OpenGLContext.h
vs2022/: OpenGLLayeredWindow.sln  OpenGLLayeredWindow.vcxproj  OpenGLLayeredWindow.vcxproj.filters  glad.vcxproj
